blog/infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-node-srv
spec: 
  type: NodePort
  selector: 
    app: comments
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
