blog/infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-node-srv
spec: 
  type: NodePort
  selector: 
    app: query
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
